# HerHealthGPT

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
HerHealthGPT-LU_seed/: FINETUNING_TARGETS.md  LUHME_direction_summary.md  LUHME_direction_workflow.md  LUHME_weekly_brief.md  README.md  benchmark_multilingual_v1.csv  benchmark_multilingual_v1.jsonl  build_seed.py  clarification_variants_v2.json  decisions_log.md  ft_corpus_stats.md  ft_corpus_v1.jsonl  gold_label_completion_report.md  leakage_log.csv  leakage_note.md  phase2_dedup_drops.jsonl  phase3_proposed_targets.json  phase3_selected_seeds.json  regeneration_report.md  seeds_en_v1.csv  seeds_en_v1.jsonl  stats_summary.md  style_rewrites_v2.json  style_variants.json  style_variants_manual.json
Overleaf_Template/: OVERLEAF_SETUP.md  README.md  acl_latex.tex  acl_lualatex.tex  acl_natbib.bst  anthology.bib.txt  custom.bib  fig1_overview.tex  overleaf_abstract.tex  overleaf_intro_related.tex  overleaf_methods.tex  overleaf_results_discussion.tex
camera_ready_updated_results/: CHANGELOG.md  COMPILATION_REPORT.md  DOCTOR_REVIEW_SUMMARY.md  EXPERIMENT_LINEAGE_AUDIT.md  OVERLEAF_SETUP.md  RESULTS_AUDIT.md  acl_lualatex.tex  anthology.bib.txt  custom.bib  overleaf_abstract.tex  overleaf_intro_related.tex  overleaf_methods.tex  overleaf_results_discussion.tex  overleaf_titleauthor.tex
docs/: ENVIRONMENTS.md  m3_json_design_choices.md  methodology.md  wsl_finetune_setup.md
prompts/: extract_v1.md
result/: HerHealthEval_baseline_report.md  README.md  (+4 more)
(+277 files in other folders)
