[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "femsympqa"
version = "0.1.0"
description = "FemSympQA multilingual symptom dataset pipeline (HerHealthGPT sub-project 1)"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "pydantic>=2.7",
    "openai>=2.0",
    "transformers>=4.44",
    "torch>=2.3",
    "sentencepiece>=0.2",
    "sentence-transformers>=3.0",
    "pandas>=2.2",
    "tabulate>=0.9",
    "python-dotenv>=1.0",
    "rapidfuzz>=3.0",
    "pyarrow>=16.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]
